# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  project_action.yml
gendiff/: __init__.py  cli.py  generate_diff.py  io.py  tree.py
gendiff/scripts/: gendiff.py
gendiff/view/: plain.py  selector.py  stylish.py
generate_diff/: cli.py  comparison.py  diff_plain_view.py  diff_view.py  gen_diff.py  gendiff.py  generate_diff.py  io.py
generate_diff/scripts/: gendiff.py
generate_diff/src/: comparison.py  diff_model.py  views.py
generate_diff/view/: json.py  plain.py  selector.py  stylish.py  v_json.py
tests/: test_diff_files.py  test_diff_model.py  test_diffs.py
tests/fixtures/: complex_diff.json  complex_json_view.json  complex_stylish_view.json  complex_stylish_view.txt  example_tests_data.py  other_file1.yaml  other_file2.yaml  other_file3.yaml  other_file4.yaml  plain.txt  simple_diff.json  simple_file1.json  simple_stylish_view.json  simple_stylish_view.txt
